# hwpers

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  HANDOFF.md  README.md  build.rs  docker-compose.yml
deploy/: README.md  build-and-save.sh  docker-compose.yml  load-and-run.sh
deploy/examples/: 01_simple_text.json  02_with_table.json  03_complex_table.json  04_mixed_content.json  05_minimal.json  JSON_SPEC.md
docs/: JSON_SPEC.md  plan.md  spec.md
examples/jsontohwpx/: full_document.json  image_avif.json  image_gif.json  image_jpeg.json  image_jpg.json  image_multi_format.json  image_png.json  image_webp.json  simple_text.json  table_merge.json  table_merge1.json  table_merge2.json  table_merge3.json  table_merge4.json  table_merge5.json  test_img.avif  with_image.json  with_image_base64.json  with_image_url.json  with_metadata_header.json  with_table.json
scripts/: batch_convert.py
src/: lib.rs
src/hwpx/: mod.rs  writer.rs
src/jsontohwpx/: converter.rs  error.rs  image.rs  mod.rs  model.rs  table.rs  text.rs
src/jsontohwpx/api/: handlers.rs  jobs.rs  mod.rs  queue.rs
src/preview/: preview_text.rs
tests/: api_test.rs  jsontohwpx_cli_test.rs  jsontohwpx_image_test.rs  jsontohwpx_table_test.rs  jsontohwpx_test.rs
