[package]
name = "hwpers"
version = "0.5.0"
edition = "2021"
authors = ["HWP Parser Contributors"]
description = "A Rust library for parsing Korean Hangul Word Processor (HWP) files with full layout rendering support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Indosaram/hwpers"
documentation = "https://docs.rs/hwpers"
homepage = "https://github.com/Indosaram/hwpers"
readme = "README.md"
keywords = ["hwp", "parser", "hangul", "document", "korean"]
categories = ["parser-implementations", "text-processing", "rendering"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]

[dependencies]
cfb = "0.11.0"
flate2 = "1.0"
encoding_rs = "0.8"
byteorder = "1.5"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
quick-xml = { version = "0.37", features = ["serialize"] }
aes = "0.8"
ecb = "0.1"
block-padding = "0.3"
clap = { version = "4", features = ["derive"] }
scraper = "0.21"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "avif"] }
reqwest = { version = "0.12", features = ["blocking"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[[bin]]
name = "jsontohwpx"
path = "src/bin/jsontohwpx.rs"

[[bin]]
name = "jsontohwpx-api"
path = "src/bin/jsontohwpx_api.rs"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[features]
default = []
